--- a/config/default/swiftmailer.message.yml
+++ b/config/default/swiftmailer.message.yml
@@ -1,5 +1,8 @@
+content_type: text/html
+text_format: plain_text
+generate_plain: false
+character_set: UTF-8
 format: text/html
 filter_format: plain_text
 respect_format: false
 convert_mode: true
-character_set: UTF-8
