--- a/config/default/user.role.seo_admin.yml
+++ b/config/default/user.role.seo_admin.yml
@@ -10,7 +10,10 @@ dependencies:
     - node.type.language_item
     - node.type.page
     - node.type.varbase_heroslider_media
+    - taxonomy.vocabulary.regions
+    - taxonomy.vocabulary.seasonal_time
     - taxonomy.vocabulary.tags
+    - taxonomy.vocabulary.traditional_knowledge_tk_labels
     - workflows.workflow.varbase_editorial_workflow
     - workflows.workflow.varbase_simple_workflow
   module:
@@ -34,6 +37,7 @@ dependencies:
     - metatag
     - moderation_sidebar
     - node
+    - panels
     - path
     - quickedit
     - rabbit_hole
@@ -48,6 +52,7 @@ dependencies:
     - taxonomy_access_fix
     - toolbar
     - total_control
+    - userprotect
     - webform
 _core:
   default_config_hash: 0KrP-yv1-oEUnwl0-FpNhmtjDKbc4E6ji60CfGDxtbc
@@ -103,16 +108,9 @@ permissions:
   - 'create terms in tags'
   - 'create url aliases'
   - 'create varbase_blog content'
-  - 'create varbase_heroslider_media content'
   - 'create webform'
   - 'customize shortcut links'
-  - 'delete any article content'
-  - 'delete any heritage_item content'
-  - 'delete any landing_page_lb content'
-  - 'delete any language_item content'
-  - 'delete any page content'
   - 'delete any varbase_blog content'
-  - 'delete any varbase_heroslider_media content'
   - 'delete any webform submission'
   - 'delete own article content'
   - 'delete own heritage_item content'
@@ -137,17 +135,18 @@ permissions:
   - 'edit own language_item content'
   - 'edit own page content'
   - 'edit own varbase_blog content'
-  - 'edit own varbase_heroslider_media content'
   - 'edit own webform'
   - 'have total control'
   - 'rabbit hole bypass node'
   - 'rabbit hole bypass taxonomy_term'
-  - 'reorder terms in tags'
-  - 'reorder terms in traditional_knowledge_tk_labels'
   - 'schedule publishing of media'
   - 'schedule publishing of nodes'
   - 'schedule publishing of taxonomy_term'
   - 'switch shortcut sets'
+  - 'translate regions taxonomy_term'
+  - 'translate seasonal_time taxonomy_term'
+  - 'translate tags taxonomy_term'
+  - 'translate traditional_knowledge_tk_labels taxonomy_term'
   - 'update any basic block content'
   - 'update any varbase_carousel_block block content'
   - 'update any varbase_gallery_block block content'
@@ -158,6 +157,7 @@ permissions:
   - 'update content translations'
   - 'use media_bulk_upload bulk upload form'
   - 'use moderation sidebar'
+  - 'use panels dashboard'
   - 'use text format full_html'
   - 'use varbase_editorial_workflow transition archive'
   - 'use varbase_editorial_workflow transition archived_published'
@@ -168,10 +168,11 @@ permissions:
   - 'use varbase_simple_workflow transition archived_published'
   - 'use varbase_simple_workflow transition create_new_draft'
   - 'use varbase_simple_workflow transition publish'
+  - userprotect.account.edit
   - 'view all media revisions'
-  - 'view all revisions'
   - 'view any unpublished content'
   - 'view any webform submission'
+  - 'view article revisions'
   - 'view content planner dashboard'
   - 'view heritage_item revisions'
   - 'view landing_page_lb revisions'
@@ -191,20 +192,13 @@ permissions:
   - 'view terms in exchange_types'
   - 'view terms in folders'
   - 'view terms in institution'
-  - 'view terms in interpretation'
   - 'view terms in item_type'
   - 'view terms in language_item_source'
   - 'view terms in languages'
   - 'view terms in local_origin'
   - 'view terms in nations'
-  - 'view terms in project_status'
-  - 'view terms in record_status'
   - 'view terms in regions'
   - 'view terms in tags'
-  - 'view terms in text_type'
   - 'view terms in traditional_knowledge_tk_labels'
-  - 'view terms in transcription_status'
-  - 'view terms in translation_status'
   - 'view the administration theme'
   - 'view varbase_blog revisions'
-  - 'view varbase_heroslider_media revisions'
